DFC-150:Fixed the spacing on the Homepage on the bottom of the "Claim Your Piece..."

--- a/sites/all/themes/custom/dfc/css/dfc.no-query.css
+++ b/sites/all/themes/custom/dfc/css/dfc.no-query.css
@@ -1914,7 +1914,7 @@ body.front .footer-top > .container, body.front .footer-top > .l-main, body.fron
   .block--bean-home-how-it-works .how-cta {
     position: relative;
     background: #ebebeb;
-    padding: 50px 28px 40px;
+    padding: 50px 28px 0px;
     text-transform: uppercase; }
     /* line 272, C:/xampp/htdocs/dollar-fishing/sites/all/themes/custom/dfc/sass/components/_hp-how-it-works.scss */
     .block--bean-home-how-it-works .how-cta .how-cta-title {
