--- a/sites/all/themes/custom/dfc/sass/components/_hp-how-it-works.scss
+++ b/sites/all/themes/custom/dfc/sass/components/_hp-how-it-works.scss
@@ -104,7 +104,7 @@
 			
 		  @include breakpoint($bp-full) {
 				/*padding: 0 130px;*/
-				     padding-bottom: 72px;
+				     padding-bottom: 35px;
 
 				
 		  }
@@ -236,11 +236,11 @@
 	.how-cta {
 		position: relative;
 		background: $color-gray-lighter;
-		padding: 50px 28px 40px;
+		padding: 50px 28px 0px;
 		text-transform: uppercase;
 		
 	  @include breakpoint($bp-desk) {
-			padding: 50px 0 40px;
+			/*padding: 50px 0 40px;*/
 	  }
 		
 		&:before {
